# tiBackupLib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  backupmanager.cpp  backupmanager.h  config.h  config.h.in  deploy_release.sh  deploy_release_qt5.sh  ipcclient.cpp  ipcclient.h  pbsclient.cpp  pbsclient.h  resdata.qrc  sshclient.cpp  sshclient.h  tiBackupLib.pro  tibackupapi.cpp  tibackupapi.h  tibackupdiskobserver.cpp  tibackupdiskobserver.h  tibackuplib.cpp  tibackuplib.h  tibackuplib_global.h  tibackupmailer.cpp  tibackupmailer.h  tibackupscheduler.cpp  tibackupscheduler.h  tibackupservice.cpp  tibackupservice.h  ticonf.cpp  ticonf.h
.github/workflows/: build.yml  deb.yml  release.yml
cmake/: tiBackupLibConfig.cmake  tiBackupLibConfig.cmake.in
debian/: changelog  control  rules
tibackuplib-dev/debian/: changelog  control  rules
workers/: tibackupjobworker.cpp  tibackupjobworker.h
